--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
                     width: 400px;
                     height: 200px;
                     border: 1px solid black;
-                    cursor: pointer;
+                    /* cursor: pointer; */
                     animation: size 1s cubic-bezier(0.33, 1, 0.68, 1);
+                    /* text-align: center; */
                     /* display: grid; */
                     img{
                         width: 100px;
@@ -61,6 +62,19 @@
                         /* text-align: center; */
                         justify-items: center;
                         margin-top: 60px;
+                    }
+                    button{
+                        background-color: rgb(50, 155, 230);
+                        width: 100px;
+                        height: 20px;
+                        /* font-size: 100%; */
+                        color: white;
+                        border-radius: 50px;
+                        padding: 0px;
+                        border: 0;
+                        margin-top: 0px;
+                        cursor: pointer;
+                        justify-content: center;
                     }
                 }
                 #header {
