--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <html lang="zh-CN">
         <head>
-            <title>?</title>
+            <title>Then name of the PhiChartRevelationTeam</title>
             <style>
                 @font-face {
                     font-family: Phi;
